# wmu_greek_utils

./: .gitignore  README.md  cts_utils.py  pyproject.toml  spacy.py
.github/workflows/: test.yml
script/: tagging-pipeline-morph-columns.py
tests/: test_agdt.py  test_normalize.py
