[project]
name = "wmu-greek-utils"
version = "0.3.1"
description = "A collection of utilities for working with Greek text"
readme = "README.md"
requires-python = ">=3.8.1"
authors = [
  { name = "Will Fitzgerald", email = "willf@users.noreply.github.com" },
]
dependencies = [
  "greek-normalisation>=0.5.1,<0.6.0",
  "regex>=2024.7.24,<2025.0.0",
]

[dependency-groups]
dev = [
  "black>=24.4.2,<25.0.0",
  "flake8>=7.1.0,<8.0.0",
  "pytest>=8.2.2,<9.0.0",
  "isort>=5.13.2,<6.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
